--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -57,7 +57,7 @@ react {
 /**
  * Set this to true to Run Proguard on Release builds to minify the Java bytecode.
  */
-def enableProguardInReleaseBuilds = false
+def enableProguardInReleaseBuilds = true
 
 /**
  * The preferred build flavor of JavaScriptCore (JSC)
@@ -107,9 +107,21 @@ android {
     }
 }
 
+configurations.all {
+    resolutionStrategy {
+        force "com.github.fingerprintjs:fingerprint-android:2.2.0"
+        cacheChangingModulesFor 0, 'seconds'
+    }
+}
+
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
+    implementation("com.github.fingerprintjs:fingerprint-android") {
+        version {
+            prefer("2.2.0")
+        }
+    }
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
