--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         kotlinVersion = "1.9.24"
     }
     repositories {
+        maven { url 'https://jitpack.io' }
         google()
         mavenCentral()
     }
